--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage":"https://solutiondive.github.io",
   "name": "blog",
   "version": "0.1.0",
   "private": true,
@@ -20,6 +21,8 @@
     "zustand": "^4.4.7"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -54,6 +57,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-tailwindcss": "^3.13.0",
+    "gh-pages": "^6.1.1",
     "prettier": "^3.1.1",
     "tailwindcss": "^3.4.0",
     "typescript": "^4.9.5"
